2003-12-15  Bernie Solomon  <bernard@ugsolutions.com>

	* reflection.c: move definition of swap_with_size
	to before its first call

2003-12-15  Zoltan Varga  <vargaz@freemail.hu>

	* object.c: Fix warnings.

	* icall.c (ves_icall_Type_Get...): Only consider inherited static
	members if FlattenHierarchy is set.

	* reflection.c (mono_image_add_decl_security): New function to emit
	declarative security.

	* reflection.h reflection.c: Add support for declarative security.

	* appdomain.c (MONO_CORLIB_VERSION): Bump version number.
	
2003-12-13  Zoltan Varga  <vargaz@freemail.hu>

	appdomain.c (MONO_CORLIB_VERSION): Bump version number.
	
	* appdomain.c verify.c: Moved corlib version checking into its own
	function in appdomain.c since it needs to create vtables etc.

2003-12-13  Patrik Torstensson <p@rxc.se>

	* marshal.c (mono_remoting_wrapper): Fix bug 48015, using TP as this 
	instead of unwrapped server.

2003-12-12  Zoltan Varga  <vargaz@freemail.hu>

	* verify.c (check_corlib): Fix field index.

2003-12-10  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c: Applied patch from Todd Berman (tbermann@gentoo.org). New
	GetGacPath icall.

2003-12-10  Bernie Solomon  <bernard@ugsolutions.com>

	* process.c:  (ves_icall_System_Diagnostics_Process_GetWorkingSet_internal
	ves_icall_System_Diagnostics_Process_SetWorkingSet_internal):
	cope with sizeof(size_t) != sizeof(guint32).

2003-12-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* process.[ch]: the 'pid' field in MonoProcInfo stores GetLastError
	in case of failure.

2003-12-10  Mark Crichton <crichton@gimp.org>

	* icall.c: removed the GetNonZeroBytes.  We now handle this case
	in managed code.

	* rand.c, rand.h: Same here.  Also cleaned up the clode slightly.

Tue Dec 9 15:36:18 CET 2003 Paolo Molaro <lupus@ximian.com>

	* class.h, class.c, icall.c, marshal.c, object.c: ignore fields
	marked as deleted.

2003-12-09  Zoltan Varga  <vargaz@freemail.hu>
